# final_AroundMe

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  Makefile  Makefile.dev  QUICKSTART.md  README.md  SECURITY.md  docker-compose.override.yml
apps/api/: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
apps/api/app/: __init__.py  config.py  deps.py  main.py
apps/api/app/agent/: __init__.py  graph.py  llm_adapter.py  nodes.py  prompts.py  tools.py
apps/api/app/cache/: redis_client.py  result_store.py
apps/api/app/db/: __init__.py  models.py  seed.py  session.py
apps/api/app/fusion/: __init__.py  amenities.py  dedupe.py  ranking.py
apps/api/app/migrations/: env.py
apps/api/app/migrations/versions/: 001_initial_schema.py
apps/api/app/providers/: __init__.py  base.py  google.py  yelp.py
apps/api/app/routes/: health.py  profile.py  search.py
apps/api/app/schemas/: __init__.py  places.py  profile.py  search.py
apps/api/app/services/: conversation_responder.py  feature_analyzer.py  followup_parser.py  requirement_extractor.py  search_service.py  semantic_matcher.py
apps/api/app/utils/: errors.py  field_masks.py  geo.py  logging.py
apps/api/tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_dedupe.py  test_providers.py  test_ranking.py
deploy/: compose.yml
docs/: ARCHITECTURE.md  Around_Me_Project_Report.docx  aroundme_poster (1).html  aroundme_research_poster.html  poster2.html  poster3.html
(+37 files in other folders)
